Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60513

Qmenu menu is displayed incorrectly when using multiple monitors at different heights

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.0 Alpha
    • 5.7.1, 5.8.0, 5.9.0, 5.9.1
    • None
    • Ubuntu 16.04, Xorg. Other distros may apply.

      On Ubuntu, Unity seems to hide the problem. Use GNOME, Mate or something similar

    Description

      Qmenu menu is displayed incorrectly when using multiple monitors at different heights (in my case i tested using Ubuntu based distros ranging from Ubuntu 14.04 to Ubuntu 16.04, Ubuntu Gnome, Linux Mint and others).

      This bug affects any application that uses QT in the system like QT Creator, Kdenlive, Krita and even QT Examples, since the window of this QT application is on a monitor with a higher height, as can be seen in the attachments.

      I've been through this bug on several computers that use a display setup similar to the examples, I think the bug is in the way the QT interprets the position that it should draw the menu.

      I have to say that other versions of QT that I already had in other Ubuntu installations also presented this error, but as I can not remember the number I did not put them in the report.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-60513
          # Subject Branch Project Status CR V

          Activity

            People

              paeglis Gatis Paeglis
              gabriel.lp.abreu Gabriel L. P. Abreu
              Votes:
              1 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes