src/plugins/platforms/xcb/qxcbscreen.cpp
@@ -188,6 +188,23 @@ void QXcbVirtualDesktop::subscribeToXFixesSelectionNotify()
     }
 }
 
+/*! \internal
+
+    Using _NET_WORKAREA to calculate the available desktop geometry on multi-head systems (systems
+    with more than one monitor) is unreliable. Different WMs have different interpretations of what
+    _NET_WORKAREA means with multiple attached monitors. This gets worse when monitors have
+    different dimensions and/or screens are not virtually aligned. In Qt we want the available
+    geometry per monitor (QScreen), not desktop (represented by _NET_WORKAREA). WM specification
+    does not have an atom for this. Thus, QScreen is limted by the lack of support from the
+    underlying system.
+
+    One option could be that Qt does WM's job of calculating this by subtracting geometries of
+    _NET_WM_STRUT_PARTIAL and windows where _NET_WM_WINDOW_TYPE(ATOM) = _NET_WM_WINDOW_TYPE_DOCK.
+    But this won't work on Gnome 3 shell as it seems that on this desktop environment the tool panel
+    is painted directly on the root window. Maybe there is some Gnome/GTK API that could be used
+    to get height of the panel, but I did not find one. Maybe other WMs have their own tricks, so
+    the reliability of this approach is questionable.
+ */
 QRect QXcbVirtualDesktop::getWorkArea() const
 {
     QRect r;
@@ -554,6 +571,14 @@ void QXcbScreen::sendStartupMessage(const QByteArray &message) const
 
         sent += numBytes;
     } while (sent < length);
+}
+
+QRect QXcbScreen::availableGeometry() const
+{
+    static bool enforceNetWorkarea = !qEnvironmentVariableIsEmpty("QT_RELY_ON_NET_WORKAREA_ATOM");
+    bool isMultiHeadSystem = virtualSiblings().length() > 1;
+    bool useScreenGeometry = isMultiHeadSystem && !enforceNetWorkarea;
+    return useScreenGeometry ? m_geometry : m_availableGeometry;
 }
 
 QImage::Format QXcbScreen::format() const
